made changes to index.html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
             </ul>
         </nav>
     </header>
-    <main></main>
+    <main>
+        <h1>testing github push</h1>
+    </main>
     <footer></footer>
 </body>
 
