trying via terminal

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     </header>
     <main>
         <h1>testing github push</h1>
+        <p>trying via terminal</p>
     </main>
     <footer></footer>
 </body>
