--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li class="active"><a href="index.html" class="active">Home</a></li>
                 <li><a href="checkList.html">Check List</a></li>
                 <li><a href="about.html">About</a></li>
-                <!-- <li><a href="portfolio.html">Contact</a></li> -->
+                <li><a href="contact.html">Contact Us!</a></li>
             </ul>
         </nav>
     </header>
