--- a/basics.html
+++ b/basics.html
@@ -23,14 +23,16 @@
             <ul>
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="checkList.html">Check List</a></li>
-                <li><a href="about.html">About</a></li>
-                <li class="active"><a href="contact.html">Contact Us!</a></li>
+                <li><a href="basics.html">WCAG Basics</a></li>
+                <li class="active"><a href="contact.html">Get In Touch!</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <section>
-            <h1>The Ultimate Accessiblity Tool!</h1>
+            <h1>Learn about WCAG 2.2</h1>
+            <p>WCAG 2.2 stands for <strong>Web Content Accessibility Guidelines version 2.2</strong>. These rules help make websites
+                usable for everyone—including people with disabilities.</p>
         </section>
         <section></section>
     </main>
