--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
             <ul>
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="checkList.html">Check List</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="basics.html">WCAG Basics</a></li>
                 <li class="active"><a href="contact.html">Contact Us!</a></li>
             </ul>
         </nav>
