--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <ul>
                 <li class="active"><a href="index.html" class="active">Home</a></li>
                 <li><a href="checkList.html">Check List</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="basics.html">WCAG Basics</a></li>
                 <li><a href="contact.html">Contact Us!</a></li>
             </ul>
         </nav>
