added more styling

--- a/basics.html
+++ b/basics.html
@@ -20,23 +20,26 @@
             <div class="skip"><a href="#overview">Skip to Main Content</a></div>
         </div>
         <nav>
-            <ul>
+            <ul class="nav-class">
                 <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="checkList.html">Check List</a></li>
-                <li><a href="basics.html">WCAG Basics</a></li>
-                <li class="active"><a href="contact.html">Get In Touch!</a></li>
+                <li><a href="checkList.html">Checklist</a></li>
+                <li><a href="basics.html">WCAG</a></li>
+                <li class="active"><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <section>
             <h1>Learn about WCAG 2.2</h1>
+        </section>
+        <section>
             <p>WCAG 2.2 stands for <strong>Web Content Accessibility Guidelines version 2.2</strong>. These rules help make websites
                 usable for everyone—including people with disabilities.</p>
         </section>
-        <section></section>
     </main>
     <footer></footer>
+     <script src="js/bgcolor.js"></script>
+     <script src="js/script.js"></script>
 </body>
 
 </html>
