--- a/contact.html
+++ b/contact.html
@@ -20,11 +20,11 @@
             <div class="skip"><a href="#overview">Skip to Main Content</a></div>
         </div>
         <nav>
-            <ul>
+            <ul class="nav-class">
                 <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="checkList.html">Check List</a></li>
-                <li><a href="basics.html">WCAG Basics</a></li>
-                <li class="active"><a href="contact.html">Contact Us!</a></li>
+                <li><a href="checkList.html">Checklist</a></li>
+                <li><a href="basics.html">WCAG</a></li>
+                <li class="active"><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -34,6 +34,8 @@
         </section>
     </main>
     <footer></footer>
+    <script src="js/bgcolor.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
