--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SimpleWeb Home</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -19,30 +19,37 @@
         <div class="header-top">
             <div class="skip"><a href="#overview">Skip to Main Content</a></div>
         </div>
-        <h2>SimpleWeb</h2>
         <nav>
-            <ul>
+            <ul class="nav-class">
                 <li class="active"><a href="index.html" class="active">Home</a></li>
-                <li><a href="checkList.html">Check List</a></li>
-                <li><a href="basics.html">WCAG Basics</a></li>
-                <li><a href="contact.html">Contact Us!</a></li>
+                <li><a href="checkList.html">Checklist</a></li>
+                <li><a href="basics.html">WCAG</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <section id="overview">
-            <h1>The Ultimate Accessiblity Checklist</h1>
-            <div class="sticky-wrapper">
-                <div class="sticky-note">
-                    <p>These guidelines are provided </p>
-                </div>
-                <div class="sticky-note">
-                    <p>These guidelines are provided </p>
-                </div>
-            </div>
+        <section id="overview" class="hero-section">
+            <h1>The Ultimate Accessiblity Checklist!</h1>
         </section>
+            <section>
+                <div class="sticky-wrapper">
+                    <div class="sticky-note">
+                        <p>These guidelines are provided </p>
+                    </div>
+                    <div class="sticky-note">
+                        <p>These guidelines are provided </p>
+                    </div>
+                    <div class="sticky-note">
+                        <p>These guidelines are provided </p>
+                    </div>
+                </div>
+            </section>
     </main>
     <footer></footer>
+
+    <script src="js/bgcolor.js"></script>
+     <script src="js/script.js"></script>
 </body>
 
 </html>
