made some more changes

--- a/basics.html
+++ b/basics.html
@@ -21,10 +21,9 @@
         </div>
         <nav>
             <ul class="nav-class">
-                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="checkList.html">Checklist</a></li>
-                <li><a href="basics.html">WCAG</a></li>
-                <li class="active"><a href="contact.html">Contact</a></li>
+                <li><a href="basics.html" class="active">Tools</a></li>
             </ul>
         </nav>
     </header>
@@ -40,15 +39,16 @@
     </main>
     <footer>
         <div>
-            <p>  <a href="https://www.w3.org/TR/WCAG22/" target="_blank">WCAG
-                Website</a> | SimpleWeb by Shrina Tyarla </p>
+            <h3>Most Popular Resources</h3>
+            <ul>
+                <li><a href="https://www.w3.org/TR/WCAG22/" target="_blank">WCAG Website</a></li>
 
-            <p>© Copyrights <span id="year"></span></p>
+            </ul>
         </div>
+        <p> © Copyrights <span id="year"></span>  SimpleWeb by Shrina Tyarla </p>
     </footer>
     <script src="js/bgcolor.js"></script>
     <script src="js/script.js"></script>
-    <script>document.getElementById("year").innerHTML = new Date().getFullYear();</script>
 </body>
 
 </html>
