--- a/checkList.html
+++ b/checkList.html
@@ -21,17 +21,24 @@
         </div>
         <nav>
             <ul class="nav-class">
-                <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="checkList.html">Checklist</a></li>
-                <li><a href="basics.html">WCAG</a></li>
-                <li class="active"><a href="contact.html">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="checkList.html" class="active">Checklist</a></li>
+                <li><a href="basics.html">Tools</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <section class="other-section" id="overview">
-            <div class="hero-centered">
-                <h1>Keep track of your website's Accessiblity</h1>
+            <div class="other-centered">
+                <div>
+                    <h1>Keep track of your website's Accessiblity</h1>
+                    <p>Your AIM Score depends on how accessible your website is, use this checklist to find out if yoy are
+                        following all the rules</p>
+                </div>
+                <div class="sticky-note">
+                    <p> Note: <br>
+                        This list has been directly sourced from the WCAG 2.2 List </p>
+                </div>
             </div>
         </section>
         <div class="container">
@@ -43,7 +50,7 @@
 
             <div class="content">
                 <div class="tab-content" id="food-content">
-                    <div>
+                    <div class="tab-element">
                         <h2>1.4.1 Using Color to Convey Meaning</h2><br>
                         <details>
                             <summary>
@@ -51,8 +58,8 @@
                             </summary>
                             <p>Color is not used as the only visual means of conveying information, indicating an
                                 action, prompting a response, or distinguishing a visual element.</p>
-                        </details><br>
-                    </div>
+                        </details>
+                    </div><br>
                     <div class="sticky-wrapper">
                         <div class="sticky-note">
                             <p>These guidelines are provided </p>
