--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
             <ul class="nav-class">
                 <li class="active"><a href="index.html" class="active">Home</a></li>
                 <li><a href="checkList.html">Checklist</a></li>
-                <li><a href="basics.html">WCAG</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="basics.html">Tools</a></li>
             </ul>
         </nav>
     </header>
