made some more changes

--- a/checkList.html
+++ b/checkList.html
@@ -31,8 +31,9 @@
         <section class="other-section" id="overview">
             <div class="other-centered">
                 <div>
-                    <h1>Keep track of your website's Accessiblity</h1>
-                    <p>Your AIM Score depends on how accessible your website is, use this checklist to find out if yoy are
+                    <h1>Keep track of your Website's Accessiblity</h1>
+                    <p>Your AIM Score depends on how accessible your website is, use this checklist to find out if you
+                        are
                         following all the rules</p>
                 </div>
                 <div class="sticky-note">
@@ -50,54 +51,104 @@
 
             <div class="content">
                 <div class="tab-content" id="food-content">
+                    <aside>
+                        <div class="sticky-note">
+                            <p>These guidelines are provided </p>
+                        </div>
+                    </aside>
                     <div class="tab-element">
                         <h2>1.4.1 Using Color to Convey Meaning</h2><br>
                         <details>
                             <summary>
                                 Learn More about this Rule
                             </summary>
+                            <h3>Level A</h3>
                             <p>Color is not used as the only visual means of conveying information, indicating an
                                 action, prompting a response, or distinguishing a visual element.</p>
+                            <p>Where do we use this rule?</p>
+                            <ul>
+                                <li>Graphs</li>
+                                <li>Coloured Icons</li>
+                            </ul>
                         </details>
                     </div><br>
-                    <div class="sticky-wrapper">
-                        <div class="sticky-note">
-                            <p>These guidelines are provided </p>
-                        </div>
-                        <div class="sticky-note">
-                            <p>These guidelines are provided </p>
-                        </div>
+                    <div class="tab-element">
+                        <h2>1.4.3 Color Contrast (Minimum)</h2><br>
+                        <details>
+                            <summary>
+                                Learn More about this Rule
+                            </summary>
+                            <h3>Level AA</h3>
+                            <p>The visual presentation of text and images of text has a contrast ratio of at least 4.5:1
+                            </p>
+                            <p>The exceptions are:</p>
+                            <ul>
+                                <li><strong>Large Text</strong>
+                                    Large-scale text and images of large-scale text have a contrast ratio of at least
+                                    3:1</li>
+                                <li><strong>Incidental</strong>
+                                    Text or images of text that are part of an inactive user interface component, that
+                                    are pure decoration, that are not visible to anyone, or that are part of a picture
+                                    that contains significant other visual content, have no contrast requirement.</li>
+                                <li><strong>Logotypes</strong>
+                                    Text that is part of a logo or brand name has no contrast requirement.</li>
+                            </ul>
+                        </details>
+                    </div><br>
+                    <div class="tab-element">
+                        <h2>1.4.8 Color Contrast (Enhanced)</h2><br>
+                        <details>
+                            <summary>
+                                Learn More about this Rule
+                            </summary>
+                            <h3>Level AAA</h3>
+                            <p>The visual presentation of text and images of text has a contrast ratio of at least 7:1
+                            </p>
+                            <p>The exceptions are:</p>
+                            <ul>
+                                <li><strong>Large Text</strong>
+                                    Large-scale text and images of large-scale text have a contrast ratio of at least
+                                    4.5:1</li>
+                                <li><strong>Incidental</strong>
+                                    Text or images of text that are part of an inactive user interface component, that
+                                    are pure decoration, that are not visible to anyone, or that are part of a picture
+                                    that contains significant other visual content, have no contrast requirement.</li>
+                                <li><strong>Logotypes</strong>
+                                    Text that is part of a logo or brand name has no contrast requirement.</li>
+                            </ul>
+                        </details>
+                    </div><br>
+                </div>
+            </div>
+
+            <div class="tab-content hidden" id="places-content">
+                <div class="sticky-wrapper">
+                    <div class="sticky-note">
+                        <p>These guidelines are provided </p>
+                    </div>
+                    <div class="sticky-note">
+                        <p>These guidelines are provided </p>
                     </div>
                 </div>
+            </div>
 
-                <div class="tab-content hidden" id="places-content">
-                    <div class="sticky-wrapper">
-                        <div class="sticky-note">
-                            <p>These guidelines are provided </p>
-                        </div>
-                        <div class="sticky-note">
-                            <p>These guidelines are provided </p>
-                        </div>
+            <div class="tab-content hidden" id="me-content">
+                <div class="sticky-wrapper">
+                    <div class="sticky-note">
+                        <p>These guidelines are provided </p>
                     </div>
-                </div>
-
-                <div class="tab-content hidden" id="me-content">
-                    <div class="sticky-wrapper">
-                        <div class="sticky-note">
-                            <p>These guidelines are provided </p>
-                        </div>
-                        <div class="sticky-note">
-                            <p>These guidelines are provided </p>
-                        </div>
+                    <div class="sticky-note">
+                        <p>These guidelines are provided </p>
                     </div>
                 </div>
             </div>
         </div>
         </div>
+        </div>
     </main>
     <footer>
         <div>
-            <p> <a href="https://www.w3.org/TR/WCAG22/" target="_blank">WCAG
+            <p><a href="https://www.w3.org/TR/WCAG22/" target="_blank">WCAG
                     Website</a> | SimpleWeb by Shrina Tyarla </p>
 
             <p>© Copyrights <span id="year"></span></p>
