--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
                     <div class="sticky-note">
                         <p>These guidelines are provided </p>
                     </div>
-                </div>
+                </div><br>
             </section>
     </main>
     <footer>
         <div>
-            <p>  <a href="https://www.w3.org/TR/WCAG22/" target="_blank">WCAG
+            <p><a href="https://www.w3.org/TR/WCAG22/" target="_blank">WCAG
                 Website</a> | SimpleWeb by Shrina Tyarla </p>
 
             <p>© Copyrights <span id="year"></span></p>
