--- a/basics.html
+++ b/basics.html
@@ -39,13 +39,11 @@
     </main>
     <footer>
         <div>
-            <h3>Most Popular Resources</h3>
-            <ul>
-                <li><a href="https://www.w3.org/TR/WCAG22/" target="_blank">WCAG Website</a></li>
+            <p><a href="https://www.w3.org/TR/WCAG22/" target="_blank">WCAG
+                Website</a> | SimpleWeb by Shrina Tyarla </p>
 
-            </ul>
+            <p>© Copyrights <span id="year"></span></p>
         </div>
-        <p> © Copyrights <span id="year"></span>  SimpleWeb by Shrina Tyarla </p>
     </footer>
     <script src="js/bgcolor.js"></script>
     <script src="js/script.js"></script>
