--- a/basics.html
+++ b/basics.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SimpleWeb</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -28,7 +28,7 @@
         </nav>
     </header>
     <main>
-        <section>
+        <section id="overview">
             <h1>Learn about WCAG 2.2</h1>
         </section>
         <section>
